--- a/my.cnf
+++ b/my.cnf
@@ -1,16 +1,9 @@
-#
-## my.cnf for MySQL8.0+
-## 本配置文件主要适用于MySQL 8.0+版本
-# updated at 2020/03/16 by nicole
-#
 [client]
 port	= $--instance-ports
 socket	= $--data-prefix/mysql$--instance-ports/mysql$--instance-ports.sock
-
 [mysql]
 prompt="\u@\h[\d]> "
 no-auto-rehash
-
 [mysqld]
 user                                   = $--mysql-user
 port                                   = $--instance-ports
@@ -20,139 +13,180 @@ socket                                 = $--data-prefix/mysql$--instance-ports/m
 pid_file                               = $--log-prefix/mysql$--instance-ports/mysql$--instance-ports.pid
 mysqlx_port                            = 1$--instance-ports
 mysqlx_socket                          = $--data-prefix/mysql$--instance-ports/mysqlx1$--instance-ports.sock
-
-
-#--- GLOBAL ---#
+# MySQL服务器的唯一标识，用于复制和集群。
 server_id                              = $--server-id$--instance-ports
+# 服务器字符集设置为utf8mb4，支持存储多语言字符。
 character-set-server                   = utf8mb4
+# 服务器排序规则设置为utf8mb4_unicode_ci，用于字符串比较和排序。
 collation-server                       = utf8mb4_unicode_ci
+# 禁用客户端握手时的字符集验证，提高连接效率。
 character-set-client-handshake         = FALSE
+# 默认的身份验证插件设置为'mysql_native_password'，与旧版MySQL兼容。
 default_authentication_plugin          = 'mysql_native_password'
+# 临时文件目录路径，用于存储临时数据文件。
 tmpdir                                 = $--data-prefix/mysql$--instance-ports/mysqltmp
+# 日志中使用系统时间戳。
 log_timestamps                         = SYSTEM
+# 错误日志文件路径。
 log_error                              = $--log-prefix/mysql$--instance-ports/error.log
-log_error_verbosity                    = 2  
+# 错误日志的详细程度，2表示详细信息。
+log_error_verbosity                    = 2
+# 启用慢查询日志记录。
 slow_query_log                         = 1
+# 慢查询日志文件路径。
 slow_query_log_file                    = $--log-prefix/mysql$--instance-ports/slowlogs/mysql_slow.log
+# 定义慢查询的时间阈值，单位为秒。
 long_query_time                        = 1
+# 启用一般查询日志记录。
 general_log_file                       = $--log-prefix/mysql$--instance-ports/mysql_gene.log
+# 安全文件目录，用于加载和存储安全文件。
 secure_file_priv                       = $--data-prefix/mysql$--instance-ports/filedir
+# 禁用本地文件加载功能。
 local_infile                           = 0
-
-#read_only                              = 1
-#super_read_only                        = 1
+# 禁用事件调度器。
+event_scheduler                        = off
+# 用户登录时激活所有角色。
 activate_all_roles_on_login            = 1
-
-innodb_print_ddl_logs                  = 1       # mysql8.0.3 新增
+# InnoDB打印DDL操作的日志。
+innodb_print_ddl_logs                  = 1
+# 打开文件数限制。
 open_files_limit                       = 65535
+# 线程缓存大小。
 thread_cache_size                      = 3000
+# 表缓存大小。
 table_open_cache                       = 1024
+# 表定义缓存大小。
 table_definition_cache                 = 1024
+# 表缓存实例数。
 table_open_cache_instances             = 64
+# 线程栈大小。
 thread_stack                           = 512K
+# 禁用外部锁定。
 external-locking                       = FALSE
+# 排序缓冲区大小。
 sort_buffer_size                       = 4M
+# 连接使用的缓冲区大小。
 join_buffer_size                       = 4M
+# 线程缓存大小。
 thread_cache_size                      = 5000
+# 临时表大小限制。
 tmp_table_size                         = 32M
+# 最大堆内存临时表大小限制。
 max_heap_table_size                    = 32M
-#slave_rows_search_algorithms          = 'INDEX_SCAN,HASH_SCAN'        ## 8.0.1版本后已弃用此参数，从8.0.1开始，此参数的默认值为HASH_SCAN和INDEX_SCAN
+# 键缓冲区大小。
 key_buffer_size                        = 32M
+# 读取缓冲区大小。
 read_buffer_size                       = 8M
+# 随机读取缓冲区大小。
 read_rnd_buffer_size                   = 4M
+# 批量插入缓冲区大小。
 bulk_insert_buffer_size                = 64M
+# 锁等待超时时间，单位为秒。
 lock_wait_timeout                      = 3600
-lower_case_table_names                 = 1 
+# 表名是否区分大小写，1表示不区分大小写。
+lower_case_table_names                 = 1
+# 启用显式的时间戳默认值。
 explicit_defaults_for_timestamp        = 1
-
-#myisam
-myisam_sort_buffer_size                = 128M
-myisam_max_sort_file_size              = 10G
-myisam_repair_threads                  = 1
-
 #innodb
+# InnoDB线程并发设置为0，表示自动根据CPU核心数配置。
 innodb_thread_concurrency              = 0
+# InnoDB同步自旋等待次数。
 innodb_sync_spin_loops                 = 100
+# InnoDB自旋等待延迟时间，单位为毫秒。
 innodb_spin_wait_delay                 = 30
+# 事务隔离级别设置为READ-COMMITTED。
 transaction_isolation                  = READ-COMMITTED
-#innodb_additional_mem_pool_size       = 16M
+# InnoDB缓冲池大小。
 innodb_buffer_pool_size                = $--innodb-buffer-pool-size
+# 服务器启动时加载InnoDB缓冲池。
 innodb_buffer_pool_load_at_startup     = 1
+# 服务器关闭时将InnoDB缓冲池内容dump到磁盘。
 innodb_buffer_pool_dump_at_shutdown    = 1
+# InnoDB数据文件路径和大小。
 innodb_data_file_path                  = ibdata1:1G:autoextend
+# InnoDB日志缓冲区大小。
 innodb_log_buffer_size                 = 32M
+# InnoDB日志文件大小。
 innodb_log_file_size                   = 2G
+# InnoDB日志文件组数。
 innodb_log_files_in_group              = 2
+# InnoDB最大撤销日志大小。
 innodb_max_undo_log_size               = 4G
-
 #--- REPL ---#
+# 启用二进制日志。
 log_bin                                = $--log-prefix/mysql$--instance-ports/binlogs/mysql_bin
+# 在二进制日志中记录行级查询日志事件。
 binlog_rows_query_log_events           = ON
-#for mysql8 binlog_expire_logs_seconds instead of binlog_expire_logs_days
-#expire_logs_days                      = 30
+# 二进制日志过期时间，单位为秒。
 binlog_expire_logs_seconds             = 2592000
+# 启用二进制日志校验和。
 binlog_checksum                        = 1
+# 二进制日志格式设置为行级格式。
 binlog_format                          = row
+# 二进制日志缓存大小。
 binlog_cache_size                      = 4M
+# 最大二进制日志缓存大小。
 max_binlog_cache_size                  = 2G
+# 单个二进制日志文件大小。
 max_binlog_size                        = 1G
 min_examined_row_limit                 = 0
 log_slow_admin_statements              = 1
 log_slow_slave_statements              = 1
+# 查询超出索引的记录时记录慢查询。
 log_queries_not_using_indexes          = 0
+# 记录从服务器的更新事件。
 log_slave_updates
+# 主服务器信息存储方式设置为表。
 master_info_repository                 = TABLE
+# 中继日志信息存储方式设置为表。
 relay_log_info_repository              = TABLE
+# 跳过从服务器启动同步。
 skip_slave_start
 #--gtid
+# 启用GTID（全局事务标识）模式。
 gtid_mode                              = ON
+# 强制执行GTID一致性。
 enforce_gtid_consistency               = 1
-
-#--- semi sync replication settings ---#
-##增强半同步复制
-#plugin_dir                             = $--base-prefix/lib/plugin     #官方版本的路径
-#plugin_load                            = "rpl_semi_sync_master=semisync_master.so;rpl_semi_sync_slave=semisync_slave.so"   #官方版本的路径
-#rpl_semi_sync_master_enabled           = 1      #建议不要直接写入到my.cnf配置文件开启
-#rpl_semi_sync_slave_enabled            = 1      #建议不要直接写入到my.cnf配置文件开启
-#loose_rpl_semi_sync_master_timeout     = 3000
-
-
 #--- flush disk ---#
+# 事务提交时刷新日志到磁盘。
 innodb_flush_log_at_trx_commit         = 1
+# 同步二进制日志刷新到磁盘。
 sync_binlog                            = 1
 #--relay_log
+# 中继日志文件路径。
 relay_log                              = $--log-prefix/mysql$--instance-ports/relaylogs/mysql_relay_bin
+# 中继日志恢复。
 relay_log_recovery                     = 1
+# 清理中继日志。
 relay_log_purge                        = 1
-
-
 #--- NETWORK ---#
+# 最大允许的数据包大小。
 max_allowed_packet                     = 128M
+# 最大等待连接数。
 back_log                               = 1024
+# 交互式超时时间。
 interactive_timeout                    = 3600
+# 等待连接超时时间。
 wait_timeout                           = 3600
+# 最大连接数。
 max_connections                        = 5000
+# 禁用DNS解析。
 skip_name_resolve                      = 1
+# 最大连接错误次数。
 max_connect_errors                     = 1000000
-
-#--UNDO 
-#innodb_undo_directory                  = ./
-#innodb_undo_logs                       = 128
-#innodb_undo_log_truncate               = ON
-# The setting INNODB_UNDO_TABLESPACES is deprecated and is no longer used.  InnoDB always creates 2 undo tablespaces to start with
-#innodb_undo_tablespaces                = 3
-
 #--并行复制
-loose-binlog_transaction_dependency_tracking      = WriteSet_Session
-#loose-binlog_transaction_dependency_tracking      = WriteSet      
-loose-binlog_transaction_dependency_history_size  = 1000000       # 可设置的最大值为1000000											   
+# 并行复制依赖跟踪设置为WriteSet。
+loose-binlog_transaction_dependency_tracking      = WriteSet
+# 并行复制依赖历史大小限制。
+loose-binlog_transaction_dependency_history_size  = 1000000
+# 事务写集抽取方法设置为XXHASH64。
 loose-transaction_write_set_extraction            = XXHASH64
-slave_parallel_type                               = LOGICAL_CLOCK 
-slave_parallel_workers                            = 8             # 根据服务器配置适当调整
-
-# 根据您的服务器IOPS能力适当调整
-# 一般配普通SSD盘的话，可以调整到 10000 - 20000
-# 配置高端PCIe SSD卡的话，则可以调整的更高，比如 50000 - 80000
+# 并行复制类型设置为LOGICAL_CLOCK。
+slave_parallel_type                               = LOGICAL_CLOCK
+# 并行复制工作线程数。
+slave_parallel_workers                            = 8
+# 根据服务器IOPS能力适当调整以下参数，设置硬盘性能相关。
+# 一般SSD盘调整到 10000 - 20000，高端PCIe SSD卡可以调整更高。
 innodb_io_capacity = 4000
 innodb_io_capacity_max = 8000
 innodb_flush_sync = 0
@@ -171,20 +205,17 @@ innodb_rollback_on_timeout = 1
 innodb_print_all_deadlocks = 1
 innodb_file_per_table = 1
 innodb_online_alter_log_max_size = 4G
-#for mysql 8 this variables ls unknown
-##internal_tmp_disk_storage_engine = InnoDB
 innodb_stats_on_metadata = 0
-
+# 启用InnoDB状态文件记录。
 innodb_status_file = 1
-# 注意: 开启 innodb_status_output & innodb_status_output_locks 后, 可能会导致log-error文件增长较快
+# 开启InnoDB状态输出，可能导致日志文件增长。
 innodb_status_output = 0
 innodb_status_output_locks = 0
-
-#performance_schema
+# 启用性能模式。
 performance_schema = 1
+# 启用性能模式的详细信息。
 performance_schema_instrument = '%=on'
-
-#innodb monitor
+# 启用InnoDB监控模块。
 innodb_monitor_enable="module_innodb"
 innodb_monitor_enable="module_server"
 innodb_monitor_enable="module_dml"
@@ -199,31 +230,7 @@ innodb_monitor_enable="module_index"
 innodb_monitor_enable="module_ibuf_system"
 innodb_monitor_enable="module_buffer_page"
 innodb_monitor_enable="module_adaptive_hash"
-
-
+# 允许函数创建者执行二进制日志写入。
 log_bin_trust_function_creators = 1
-
-##--- group replication settings ---
-#plugin-load = "group_replication.so"
-#transaction-write-set-extraction = XXHASH64
-#report_host = 172.31.92.104
-#binlog_checksum = NONE
-#loose_slave_preserve_commit_order = on 
-#loose_group_replication = FORCE_PLUS_PERMANENT
-#loose_group_replication_group_name = "f0d9e877-661b-487c-a955-7fae37a5c2bd"
-#loose_group_replication_compression_threshold = 100000       # mysql8.0.11后默认值为1000000字节,1M
-#loose_group_replication_flow_control_mode = 0
-#loose_group_replication_single_primary_mode = 1
-#loose_group_replication_transaction_size_limit = 331350016
-#loose_group_replication_member_expel_timeout = 20
-#loose_group_replication_unreachable_majority_timeout = 20
-#loose_group_replication_start_on_boot = off
-#loose_group_replication_local_address = '172.31.92.104:2$--instance-ports'
-#loose_group_replication_group_seeds = '172.31.92.102:2$--instance-ports,172.31.92.103:2$--instance-ports,172.31.92.104:2$--instance-ports'
-#loose_group_replication_ip_whitelist= '172.31.92.0/20'
-#loose_group_replication_bootstrap_group = off											  
-
 [mysqldump]
 quick
-
-
